# OpenBoard

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  brainstorm conversation.bskc  openboard.spec  pyproject.toml  renovate.json
.build/: pyinstaller_spec.py
.build/hooks/: hook-accessible_output3.py  hook-blinker.py  hook-chess.py  hook-openboard.py
.build/installers/: README.md
.build/installers/scripts/: build_installer.py  (+3 more)
.build/scripts/: build.py
.build/utils/: __init__.py  version.py
.build/validation/: verify_build.py
.github/: README.md  dependabot.yml
.github/workflows/: build-and-validate.yml  ci.yml  release.yml  setup-build-installer.yml  setup-build.yml  setup-lint.yml  setup-test.yml  setup-validate-executable.yml  setup-validate.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/icons/: README.md  generate_icons.py  generate_icons.sh  openboard.icns
config/: keyboard_config.json
openboard/: __init__.py  __main__.py  exceptions.py  logging_config.py
openboard/config/: __init__.py  keyboard_config.py  migration.py  paths.py  settings.py
openboard/controllers/: chess_controller.py
openboard/engine/: downloader.py  engine_adapter.py  engine_detection.py  stockfish_manager.py
openboard/models/: board_state.py  game.py  game_mode.py  move_kind.py  opening_book.py
openboard/views/: engine_dialogs.py  game_dialogs.py  views.py
tests/: CONCERNS_TRACEABILITY.md  README.md  conftest.py  test_board_state_terminal.py  test_build_validation.py  test_chess_controller.py  test_chess_controller_opening_book.py  test_downloader.py  test_downloader_security.py  test_engine_adapter.py  test_engine_adapter_integration.py  test_engine_adapter_simple.py  test_engine_detection.py  test_exceptions.py  test_game.py  test_game_async.py  test_game_mode.py  test_game_opening_book_integration.py  test_keyboard_config.py  test_migration.py  test_opening_book.py  test_paths.py  test_settings.py  test_stockfish_manager.py  test_views_menus.py  test_views_startup_ordering.py
(+24 files in other folders)
